compiler/tests/should-fail/ConfidentialityChangingEndorsement.via
/* UndefinedHostError */

fun main() {
    val result: int = endorse 42 to {alice<-} from {alice};
}
